--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = Firmware
 	url = https://github.com/SimPlat/Firmware
 [submodule "Submod"]
-	url = git@github.com:SimPlat/Firmware.git
+	url = https://github.com/SimPlat/Firmware
 	branch = development
